# SupportYourCreator

./: .gitignore  .replit  README.md  ai.py  config.py  database_handler.py  db_handler.py  giveaway.json  indexWorkedbefore.html  main.py  manual_sender.py  play2earn_bot.py  pyproject.toml  queues.py  ratelimit.py  replit.nix  requirements.txt  timeTracker.verse
reviewGUI/: app.py
reviewGUI/templates/: index.html  privacy_policy.html
src/: ai.py  config.py  db_handler.py  play2earn_bot.py  queues.py
static/: base_style.css  style.css
templates/: impressum.html  index.html  privacy-policy.html
