[tool.poetry]
name = "discord-verification-bot"
version = "0.1.0"
description = "A Discord bot for verifying supporter purchases using the Epic Games Support-A-Creator Code."
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
discord.py = "2.3.2"
replit = "3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"